--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
  
     <section class="services">
-      <h2>Why We are Best in India</h2>
+      <h2>Why We are Best in Hindustan</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
         recusandae explicabo fugit accusantium, ipsum adipisci voluptatum, vitae
