--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <div class="header-top">Free shipping available all over the India!</div>
+      <div class="header-top">Free shipping available all over the Hindustan!</div>
       <nav>
         <a href="#" class="logo">ShopE</a>
         <div class="main_header">
